[improve][test] Improve integration test profiling test example